css/style.css
/* ... */
.service-star {
    text-align: center;
    color: rgba(240, 180, 60, 0.7);
}

.service h4 {
    text-align: center;
    margin: 0px;
    font-size: 1.1em;
    font-weight: 400;
}

.service-price {
    font-weight: 800;
}

.service-register-button {
    text-align: center;
    margin: 20px 40px 30px 40px;
    padding: 20px;
    background-color: rgba(60, 100, 130, 0.9);
}

.service-register-button a {
    color: white;
    text-decoration: none;
    font-weight: 400;
}

.service-button {
    text-align: center;
    margin: 30px 0 30px 0;
}

@media only screen and (min-width: 768px) {
    #services {
        background-color: white;
    }
    #services-content {
        flex-direction: row;
        flex-wrap: nowrap;
        align-items: flex-start;
    }
    .gift-certificate {
        width: 40%;
        transition: background-color 0.5s ease;
    }
    .gift-certificate:hover {
        background-color: rgba(255, 230, 200, 1);
    }
    .service-group {
        width: 30%;
    }
    .service-button {
        cursor: pointer;
        transition: color 0.5s ease;
    }
    .service-button:hover {
        color: rgba(240, 180, 60, 1);
    }
    .service-register-button {
        transition: background-color 0.5s ease;
    }
    .service-register-button:hover {
        background-color: rgba(255, 230, 200, 1);
    }
    .service-register-button a:hover {
        color: rgba(60, 100, 130, 1);
    }
}

/* SECTION ABOUT */

#about {
    background-color: rgba(255, 230, 200, 1);
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#about-content {
    text-align: left;
}

#about img {
    width: 500px;
    max-width: 100%;
}

@media only screen and (min-width: 1200px) {
    #about {
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: center;
    }
    #about div {
        padding: 0px 50px 0px 50px;
        width: 100%;
    }
}

/* SECTION FEEDBACK */

#feedback {
    background-color: white;
}

.feedback-screenshot {
    width: 100%;
    padding: 0px 10px 0 10px;
}

#feedback-content {
    margin: 5px;
    padding-bottom: 20px;
  }

@media only screen and (min-width: 1000px) {
      .feedback-screenshot {
        width: 40%;
    }
}
@media only screen and (min-width: 1350px) {
    .feedback-screenshot {
      width: 30%;
  }
}

/* SECTION COURSE */

#course {
    background-color: rgba(255, 230, 200, 1);
}

#course-content {
    display: flex;
    flex-direction: column;
    text-align: left;
    justify-content: center;
}

#course-content div {
    margin: 0 30px 0 30px;
}

#course-price {
    margin: 40px 0px 40px 0px;
}

.course-button {
    text-align: center;
    margin: 20px 40px 30px 40px;
    padding: 20px;
    background-color: rgba(60, 100, 130, 0.9);
}

.course-button a {
    text-decoration: none;
    font-weight: 400;
    color: white;
}

@media only screen and (min-width: 768px) {
    #course-content {
        flex-direction: row;
    }
    #course-content div {
        width: 40%;
    }
    .course-button {
        transition: background-color 0.5s ease;
    }
    .course-button:hover {
        background-color: rgba(60, 100, 130, 1);
    }
    .course-button a:hover {
        color: white;
    }
}

/* SECTION BLOG */

#blog {
    background-color: rgba(60, 100, 130, 0.3);
}

#blog-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.blog-preview {
    background-color: white;
    border-radius: 20px;
    margin: 10px;
    padding: 20px;
    max-width: 500px;
}

.blog-preview-content {
    text-align: left;
}

.blog-preview-more {
    margin-top: 20px;
}

.instagram-more {
    border: 1px solid rgba(60, 100, 130, 0.3);
    margin: 30px auto 50px auto;
    background-color: white;
    text-align: center;
    max-width: 80%;
}

.instagram-more a {
    text-decoration: none;
    color: rgba(60, 100, 130, 1);
}

.blog-image {
    width: 500px;
    max-width: 100%;
}

@media only screen and (min-width: 768px) {
    #blog-content {
        flex-direction: row;
        align-items: flex-start;
    }
    .blog-preview {
        margin: 10px;
        padding: 20px;
        width: 30%;
    }
    .instagram-more {
        width: 40%;
        transition: background-color 0.5s ease;
    }
    .instagram-more:hover {
        background-color: rgba(255, 230, 200, 1);
    }
}

/* SECTION CONTACTS */

#contacts-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
}

.contacts-row a {
    margin: 0 0 0 5px;
}

.contacts-icon {
    height: 30px;
    vertical-align: middle;
    fill: rgba(60, 100, 130, 1);
}

@media only screen and (min-width: 768px) {
    #contacts-content {
        flex-direction: row;
    }
    #contacts-content div {
        margin: 0px 20px 0 20px;
        width: 300px;
    }
    .contacts-icon {
        transition: fill 0.5s ease;
    }
}

/* POST */

#post {
    width: 100%;
}

#post-image {
    width: 100%;
}

#post-title {
    font-family: 'Amatic SC', cursive;
    font-size: 3em;
    margin: 70px 0px 20px 0px;
    text-align: center;
}

#post-content {
    padding: 0 20px 0 20px;
    margin: 20px 0 100px 0;
}

#post-stars {
    color: rgba(240, 180, 60, 1);
    text-align: center;
}

#post-3 {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.post-3-preview {
    margin: 10px;
    padding: 20px;
    max-width: 500px;
}

.post-3-image {
    width: 100%;
}

.post-3-content {
    text-align: left;
}

.post-3-more {
    margin-top: 20px;
}

@media only screen and (min-width: 768px) {
    #post-content {
        padding: 0 100px 0 100px;
    }

    #post-3 {
        flex-direction: row;
        align-items: flex-start;
    }
    .post-3-preview {
        margin: 10px;
        padding: 20px;
        width: 30%;
    }
}
/* ... */

